<resources>
    <string name="app_name">Twitter</string>
    <string name="name_account">Zara</string>
    <string name="Login_account">@mmiszara</string>
    <string name="location">Kyrgyzstan</string>
    <string name="meeting_day">Joined March 2019</string>
    <string name="edit">Edit Profile</string>
    <string name="following_count">31</string>
    <string name="Following">Following</string>
    <string name="Followers">Followers</string>\
    <string name="Followers_count">4</string>
    <string name="tweet">Tweets</string>
    <string name="tweets">Tweets &amp; replies</string>
    <string name="media">Media</string>
    <string name="likes">Likes</string>
    <string name="who_to_follow">Who to Follow</string>
    <string name="Jxdn">jxdn</string>
    <string name="id_jxdn">@jxdn</string>
    <string name="josh">Josh</string>
    <string name="JoshRichard">@JoshRichard</string>
    <string name="economist">Economist</string>
    <string name="economist2">@economist_kg</string>
    <string name="follow">Follow</string>
</resources>