<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#00B7FF">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="390dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraint"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="60dp">

            <Button
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:background="@color/background">
            </Button>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_account"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_account"
            android:textSize="16sp">
        </TextView>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_location_on_24">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location">
            </TextView>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_calendar_today_24"
                android:layout_marginStart="5dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meeting_day"
                android:textSize="16sp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_count"
                    android:textColor="@color/black">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Following"
                    android:layout_marginStart="6dp">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Followers_count"
                    android:textColor="@color/black">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Following"
                    android:layout_marginStart="6dp">
                </TextView>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweet"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/tweets"
            android:textColor="@color/grey"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@id/text1"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/media"
            android:textColor="@color/grey"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@id/text2"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/likes"
            android:textColor="@color/grey"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@id/text"
            android:textStyle="bold"
            co>
        </TextView>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/constraint"
        app:layout_constraintStart_toStartOf="@+id/constraint"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp"
        android:layout_marginStart="30dp">

        <ImageView
            android:id="@+id/image3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            tools:src="@tools:sample/avatars">
        </ImageView>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="389dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/constraint"
        android:background="@color/white">

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>